add support for withdraw channel in queue
